--- a/e2e/cypress/tsconfig.json
+++ b/e2e/cypress/tsconfig.json
@@ -6,6 +6,6 @@
   },
   "include": [
     "**/*.ts",
-    "../node_modules/@types/jest/index.d.ts"
+    "node_modules/@types/jest/index.d.ts"
   ]
 }
