refactor: change file structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   app:
-    build: .
+    build: ../app
     ports:
       - "3000:3000"
-    command: ["yarn", "start"]
+    command: ["yarn", "serve"]
   e2e:
-    build: e2e
+    build: ../e2e
     depends_on:
       app:
         condition: service_started
