--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -18,6 +18,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker Compose
-        run: |
-          docker-compose up --exit-code-from e2e
+#      - name: Docker Compose
+#        run: |
+#          docker-compose up --exit-code-from e2e
