--- a/app/package.json
+++ b/app/package.json
@@ -36,11 +36,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "test": "react-scripts test --watchAll=false",
     "build": "react-scripts build",
     "serve": "serve -s build",
-    "test-dev": "react-scripts test --watchAll=false && cypress run --project ./e2e",
-    "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
