feat: update workflow

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,17 +1,5 @@
-FROM node:19.6.0
+FROM nginx:latest
 
 WORKDIR /app
 
-COPY package.json .
-COPY yarn.lock .
-
-COPY src ./src
-COPY public ./public
-COPY tsconfig.json .
-
-RUN yarn install --production
-RUN yarn build
-
-EXPOSE 3000
-
-CMD ["yarn", "serve"]
+COPY build /usr/share/nginx/html
