--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -24,5 +24,17 @@ jobs:
           yarn lint &&
           yarn test
 
-      - name: Build
+      - name: Prepare build
         run: yarn build
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build docker image
+        run: docker build . tag test-cypress-app:latest
+
+      - name: Push docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
