--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -40,3 +40,24 @@ jobs:
 
       - name: Push docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
+
+  e2e test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Pull docker images
+        run: |
+          docker pull ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest &&
+          docker pull ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e:latest
+
+      - name: Run docker images
+        run: |
+          docker run -d --name app ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
+          docker run --network=container:app ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e:latest
+
+      - name: Stop and remove containers
+        run: |
+          docker stop app-container
+          docker rm app-container
+          docker rm test-cypress-e2e
+      
