--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -41,11 +41,19 @@ jobs:
       - name: Pull docker e2e image
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e:latest
 
-      - name: e2e test
+      - name: E2E test
         run: |
           docker network create local-network
           docker run -d --name app --network local-network test-cypress-app
           docker run --rm --name e2e --network local-network -e CYPRESS_baseUrl=http://app:80 ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e
+
+      - name: Push app image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
 
 #      - name: Push docker image
 #        run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
