--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -10,7 +10,6 @@ defaults:
 
 jobs:
   build:
-    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
 
     steps:
@@ -28,11 +27,11 @@ jobs:
       - name: Prepare build
         run: yarn build
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build docker image
         run: | 
@@ -50,11 +49,6 @@ jobs:
 
       - name: Push app image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: app/build
 
 #      - name: Push docker image
 #        run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
