--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,4 +1,4 @@
-name: project
+name: app-deploy
 
 on:
   push:
@@ -9,15 +9,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install dependencies
+        run: |
+          cd app &&
+          yarn install &&
+          yarn lint &&
+          yarn test &&
+          cd ..
 
-#      - name: Docker Compose
-#        run: |
-#          docker-compose up --exit-code-from e2e
+      - name: Run compose
+        run: docker-compose up --exit-code-from e2e | grep -v app
+
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+
