--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -1,4 +1,4 @@
-name: app-deploy
+name: network
 
 on:
   push:
@@ -27,12 +27,6 @@ jobs:
       - name: Prepare build
         run: yarn build
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build docker image
         run: | 
           docker build -t test-cypress-app:latest . &&
@@ -49,27 +43,4 @@ jobs:
 
       - name: Push app image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
-
-#      - name: Push docker image
-#        run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
-
-#  e2e-test:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Pull docker images
-#        run: |
-#          docker pull ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest &&
-#          docker pull ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e:latest
-#
-#      - name: Run docker images
-#        run: |
-#          docker run -d --name app ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
-#          docker run --network=container:app ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e:latest
-#
-#      - name: Stop and remove containers
-#        run: |
-#          docker stop app-container
-#          docker rm app-container
-#          docker rm test-cypress-e2e
       
