--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -41,6 +41,11 @@ jobs:
           docker run -d --name app --network local-network test-cypress-app
           docker run --rm --name e2e --network local-network -e CYPRESS_baseUrl=http://app:80 ${{ secrets.DOCKER_USERNAME }}/test-cypress-e2e
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push app image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/test-cypress-app:latest
-      
