--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -21,7 +21,7 @@ jobs:
           cd ..
 
       - name: Run compose
-        run: docker-compose up --exit-code-from e2e | grep -v app
+        run: docker-compose up --exit-code-from e2e
 
 #      - name: Login to Docker Hub
 #        uses: docker/login-action@v2
