--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -18,6 +18,7 @@ jobs:
           yarn install &&
           yarn lint &&
           yarn test &&
+          yarn build &&
           cd ..
 
       - name: Run compose
