--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -22,7 +22,7 @@ jobs:
           cd ..
 
       - name: Run compose
-        run: docker-compose up --exit-code-from e2e
+        run: docker-compose up --exit-code-from e2e | grep -v app
 
 #      - name: Login to Docker Hub
 #        uses: docker/login-action@v2
