--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "start": "react-scripts start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "react-scripts test --watchAll=false",
+    "e2e-test": "cd .. && docker-compose up --exit-code-from e2e | grep -v app",
     "build": "react-scripts build",
     "serve": "serve -s build",
     "eject": "react-scripts eject"
